--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <a href="https://github.com/krishna5557/gemstone-price-prediction.git" class="top-left-link" target="_blank">GitHub Repository Link</a>
-    <h1>Gemstone Price Prediction - krishnakanth</h1>
+    <h1>Gemstone Price Prediction</h1>
     <img src="{{url_for('static', filename='/Image/1653032824-7331.jpg')}}" alt="Your Profile Picture" class="profile">
     <div class="form-box">
     <form action="{{url_for('predict_datapoint')}}" method="POST">
